syntax = "proto3";

package dalalstreet.api.models;

option java_multiple_files=true;

message Stock {
  uint32 id = 1;
  string short_name = 2;
  string full_name = 3;
  string description = 4;
  uint64 current_price = 5;
  uint64 day_high = 6;
  uint64 day_low = 7;
  uint64 all_time_high = 8;
  uint64 all_time_low = 9;
  uint64 stocks_in_exchange = 10;
  uint64 stocks_in_market = 11;
  bool up_or_down = 12;
  uint64 previous_day_close = 13;
  uint64 avg_last_price = 14;
  string created_at = 15;
  string updated_at = 16;
}
